--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         <!-- Jumbotron -->
         <div class="container px-2">
-            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron">
+            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron gradient-1">
                 <div class="container-fluid align-items-center">
                     <!-- First section -->
                     <div class="row align-items-center">
@@ -310,6 +310,7 @@
         </div>
         <!-- End Jumbotron -->
 
+        <!-- Features -->
         <div class="container-fluid mb-4" id="features">
             <div class="row align-items-center mt-3 mb-3">
                 <div class="col-12 col-lg-8 stack">
@@ -362,7 +363,7 @@
 
         <!-- Donate Appeal -->
         <div class="container px-2">
-            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron">
+            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron gradient-2">
                 <div class="container-fluid py-2 align-items-center">
                     <!-- First section -->
                     <div class="row align-items-center">
