--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <!-- Stop Killing Games -->
         <div class="container px-2">
-            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron">
+            <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron gradient-2">
                 <div class="container-fluid align-items-center">
                     <div class="row align-items-center">
                         <div class="col-md-8">
