Add Kenny.nl attribution to footer

--- a/index.html
+++ b/index.html
@@ -493,11 +493,13 @@
                     Created by <a target="_blank" rel="noopener noreferrer" href="https://github.com/jiannazzone">Adam
                         Iannazzone</a> and the RetroDECK team.
                 </div>
-                <!-- <div class="form-check form-switch">
-                    <input class="form-check-input" id="pixel-font-switch" type="checkbox" role="switch"
-                        id="reduceMotionSwitch" checked onchange="pixelFontToggle()">
-                    <label class="form-check-label" for="reduceMotionSwitch">Retro Fonts</label>
-                </div> -->
+            </div>
+        </div>
+        <div class="row justify-content-between">
+            <div class="col">
+                <div class="text-center">
+                    Some icons courtesy of <a target="_blank" rel="noopener noreferrer" href="https://kenney.nl/">Kenney.nl</a>.
+                </div>
             </div>
         </div>
     </footer>
