Add some commenting to index.html

--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
 
         <!-- Features -->
         <div class="container-fluid mb-4" id="features">
+
+            <!-- Screenshots -->
             <div class="row align-items-center mt-3 mb-3">
                 <div class="col-12 col-lg-8 stack">
                     <img src="assets/screens/screen01.png" class="img-fluid screenshot"
@@ -345,12 +347,15 @@
                 </div>
 
             </div>
+            <!-- End Screenshots -->
 
+            <!-- Extra Features -->
             <div class="row mb-3 py-0" id="extra-features">
                 <div class="col-12">
                     <div class="feature-card p-2 mt-2 mt-lg-0 gradient-1">
                         <h3>And so much more!</h3>
 
+                        <!-- Extra Features Row 1 -->
                         <div class="row py-0 align-items-center">
                             <div class="col-md-4">
                                 <div class="row py-0 align-items-center">
@@ -385,7 +390,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- End Extra Features Row 1 -->
                         <hr/>
+                        <!-- Extra Features Row 2 -->
                         <div class="row py-0 align-items-center">
                             <div class="col-md-4">
                                 <div class="row py-0 align-items-center">
@@ -420,24 +427,14 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- End Extra Features Row 2 -->
                     </div>
                 </div>
             </div>
-
-            <!-- <div class="row align-items-center d-flex mb-4">
-                <div class="col-12 col-lg-8">
-                    <img src="assets/screens/screen01.png" class="img-fluid screenshot"
-                        alt="The RetroDECK and ES-DE logos on a black screen" />
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="feature-card p-2 mt-2 mt-lg-0">
-                        <h3>Designed for Gaming Mode</h3>
-                        <p>RetroDECK fits right in with the other games in your Steam library.</p>
-                    </div>
-                </div>
-            </div> -->
+            <!-- End Extra Features -->
 
         </div>
+        <!-- End Features -->
 
         <!-- Donate Appeal -->
         <div class="container px-2">
