Make <hr> in #extra-features hidden on md breakpoint

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             </div>
                         </div>
                         <!-- End Extra Features Row 1 -->
-                        <hr/>
+                        <hr class="d-none d-md-block"/>
                         <!-- Extra Features Row 2 -->
                         <div class="row py-0 align-items-center">
                             <div class="col-md-4">
