Add 3 more extra features and their icons

--- a/index.html
+++ b/index.html
@@ -397,10 +397,10 @@
                             <div class="col-md-4">
                                 <div class="row py-0 align-items-center">
                                     <div class="col-3 text-center">
-                                        <img class="img-fluid" src="assets/feature-icons/lock_open.png">
+                                        <img class="img-fluid" src="assets/feature-icons/flask_half.png">
                                     </div>
                                     <div class="col-9">
-                                        <p>Enable cheats in all supported emulators.</p>
+                                        <p>Easily install on other Linux distributions.</p>
                                     </div>
                                 </div>  
                             </div>
@@ -408,10 +408,10 @@
                             <div class="col-md-4">
                                 <div class="row py-0 align-items-center">
                                     <div class="col-3 text-center">
-                                        <img class="img-fluid" src="assets/feature-icons/card_place.png">
+                                        <img class="img-fluid" src="assets/feature-icons/spinner.png">
                                     </div>
                                     <div class="col-9">
-                                        <p>Use the ES-DE frontend to easily import screenshots and metadata for your library.</p>
+                                        <p>Use the custom controller template for quick access to emulator settings with the touchpad.</p>
                                     </div>
                                 </div>
                             </div>
@@ -419,10 +419,10 @@
                             <div class="col-md-4">
                                 <div class="row py-0 align-items-center">
                                     <div class="col-3 text-center">
-                                        <img class="img-fluid" src="assets/feature-icons/award.png">
+                                        <img class="img-fluid" src="assets/feature-icons/pawns.png">
                                     </div>
                                     <div class="col-9">
-                                        <p>Connect with RetroAchievements and get credit for all of your amazing accomplishments.</p>
+                                        <p>Play online with supported emulators.</p>
                                     </div>
                                 </div>
                             </div>
