--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
     <!-- Main Content -->
     <main class="container-fluid px-0 mt-4">
 
+        <div class="container mb-4">
+            <div class="row">
+                <div class="col-12">
+                    <img class="img-fluid" src="assets/screens/logo-on-steamdeck.png"/>
+                </div>
+            </div>
+        </div>        
+
         <!-- Stop Killing Games -->
         <div class="container px-2">
             <div class="p-2 mb-4 bg-body-tertiary rounded-3 jumbotron gradient-2">
