--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- <script src="scripts/gradient.js"></script> -->
-    <script src="scripts/features.js"></script>
+    <!-- <script src="scripts/features.js"></script> -->
     <script src="scripts/accessibility.js"></script>
     <script src="scripts/carousel.js"></script>
 </body>
