Update OpenGraph metadata

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>RetroDECK</title>
-    <meta name="twitter:description"
-        content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
-    <meta property="og:image" content="assets/img/RetroDeck%20Wallpaper.png">
+
+    <meta property="og:title" content="RetroDECK" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://retrodeck.net" />
+    <meta property="og:image" content="https://retrodeck.net/assets/screens/screen03.png" />
+    <meta name="og:description"
+        content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app." />
+    
     <meta name="twitter:title" content="RetroDECK">
     <meta name="twitter:card" content="summary">
-    <meta property="og:type" content="website">
     <meta name="twitter:image" content="">
-    <meta name="description"
-        content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
+
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/rd-icons/icon_circle_2_180x180.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/rd-icons/icon_circle_16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/rd-icons/icon_circle_1_32x32.png">
@@ -513,8 +516,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!-- <script src="scripts/gradient.js"></script> -->
-    <!-- <script src="scripts/features.js"></script> -->
     <script src="scripts/accessibility.js"></script>
     <script src="scripts/carousel.js"></script>
 </body>
