Fix incorrect meta tag URLs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://retrodeck.github.io/RetroDECK-Website/">
+    <meta property="og:url" content="https://retrodeck.net">
     <meta property="og:title" content="RetroDECK">
     <meta property="og:description"
         content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
@@ -17,8 +17,8 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="retrodeck.github.io">
-    <meta property="twitter:url" content="https://retrodeck.github.io/RetroDECK-Website/">
+    <meta property="twitter:domain" content="retrodeck.net">
+    <meta property="twitter:url" content="https://retrodeck.net">
     <meta name="twitter:title" content="RetroDECK">
     <meta name="twitter:description"
         content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
