Add type and logo meta tags

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:description"
         content="RetroDECK is a polished and beginner-friendly environment for playing your retro games on Steam Deck, available with just one click from the Discover app.">
     <meta property="og:image" content="https://retrodeck.net/assets/og-image.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:logo" content="https://retrodeck.net/assets/rd-icons/icon_circle_4_512x512.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
