--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" target="_blank" rel="noopener noreferrer"
+                            href="https://flathub.org/apps/details/net.retrodeck.retrodeck">Download</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
@@ -243,7 +247,7 @@
                                 </div>
                             </a>
                         </div>
-                        <!-- End Flathub Link -->
+                        <!-- End Stop Killing Games Link -->
 
                     </div>
                 </div>
