Add footnote that theme is only in v0.9b

--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@
                         <h3>Custom ES-DE Theme</h3>
                         <p>RetroDECK includes a custom ES-DE theme with pixel text and retro vibes.
                             But you can choose any ES-DE theme in the settings menu.</p>
+                        <small>Available starting with v0.9b. You can find it in the <a href="https://github.com/RetroDECK/Cooker" target="_blank"
+                            rel="noopener noreferrer">Cooker</a> builds!</small>
                     </div>
                 </div>
 
