--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 			c-4.9-3.5-11.9-5.9-11.9-5.9L524.1,10L524.1,10z" />
                                         </svg>
                                     </div>
-                                    <div class="col-8 text-start">Learn More</div>
+                                    <div class="col-8 text-center">Learn More</div>
                                 </div>
                             </a>
                         </div>
@@ -301,7 +301,7 @@
                                                 d="M6.068 0a6 6 0 0 0-6 6 6 6 0 0 0 6 6 6 6 0 0 0 5.998-6 6 6 0 0 0-5.998-6Zm9.15.08a1.656 1.656 0 0 0-1.654 1.656v8.15a1.656 1.656 0 0 0 2.483 1.434l7.058-4.074a1.656 1.656 0 0 0 0-2.869l-1.044-.604-6.014-3.47a1.656 1.656 0 0 0-.828-.223Zm3.575 13.135a.815.815 0 0 0-.816.818v2.453h-2.454a.817.817 0 1 0 0 1.635h2.454v2.453a.817.817 0 1 0 1.635 0v-2.453h2.452a.817.817 0 1 0 0-1.635h-2.453v-2.453a.817.817 0 0 0-.818-.818zM2.865 13.5a2.794 2.794 0 0 0-2.799 2.8v4.9c0 1.55 1.248 2.8 2.8 2.8h4.9c1.55 0 2.8-1.25 2.8-2.8v-4.9c0-1.55-1.25-2.8-2.8-2.8Z" />
                                         </svg>
                                     </div>
-                                    <div class="col-8 text-start">
+                                    <div class="col-8 text-center">
                                         <div class="row">
                                             <div class="col">Get it on</div>
                                         </div>
@@ -505,7 +505,7 @@
                                                 d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2 2 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386" />
                                         </svg>
                                     </div>
-                                    <div class="col-8 text-start">Learn More</div>
+                                    <div class="col-8 text-center">Learn More</div>
                                 </div>
                             </a>
                         </div>
