--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                             </h1>
                             <p class="fs-md-4">
                                 Powered by <a target="_blank" rel="noopener noreferrer"
-                                    href="https://es-de.org/">ES-DE</a>,
-                                RetroDECK combines all of the best open-source emulators into a single application.
+                                    href="https://es-de.org/">ES-DE</a> and third party components such as tools and emulators,
+                                RetroDECK combines all of your gaming needs into a single package.
                                 Pair that with a best-in-class Steam Deck controller configuration, and you'll be in
                                 retro
                                 gaming
@@ -412,8 +412,7 @@
                                         <img class="img-fluid" src="assets/feature-icons/card_place.png">
                                     </div>
                                     <div class="col-9">
-                                        <p>Use the ES-DE frontend to easily import screenshots and metadata for your
-                                            library.</p>
+                                        <p>Use the ES-DE frontend to automatically download screenshots, videos, manuals and metadata for your library.</p>
                                     </div>
                                 </div>
                             </div>
